# aweather

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  aweather.cpp  aweather.h  frame.h  main.cpp
src/terminal/: terminal.h  tty.cpp  tty.h
src/weather/: snow.cpp  snow.h  weather.h
test/: CMakeLists.txt  test.cpp
